--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="./stylesheet/style.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous" defer></script>
-    <script src="./javascript/javascript.js"></script>
+    <script src="./javascript/javascript.js" defer></script>
     <title>Library</title>
 </head>
 <body>
     <div class="container-fluid bg-secondary p-0">
         <header class="text-bg-primary p-3"><h1>Osserc's arcane library</h1></header>
     </div>
+
+    <div class="library"></div>
 </body>
 </html>
