Finalize Bootstrap grid layout

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <header class="text-bg-primary p-3"><h1>Osserc's arcane library</h1></header>
     </div>
 
-    <div class="library"></div>
+    <div class="container-fluid text-center library row row-cols-3 m-0 p-1 justify-content-evenly align-items-center">
+    </div>
 </body>
 </html>
