Add read/unread button, add book button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 </head>
 <body>
     <div class="container-fluid bg-secondary p-0">
-        <header class="text-bg-primary p-3"><h1>Osserc's arcane library</h1></header>
+        <header class="text-bg-primary p-3 d-flex justify-content-between">
+            <h1>Osserc's arcane library</h1>
+            <button class="btn btn-info add-book">Add book</button>
+        </header>
     </div>
 
     <div class="container-fluid text-center library row row-cols-3 m-0 p-1 justify-content-evenly align-items-center">
