--- a/index.html
+++ b/index.html
@@ -1,38 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="./stylesheet/style.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous" defer></script>
-    <script src="./javascript/javascript.js" defer></script>
-    <title>Library</title>
-</head>
-<body>
-    <div class="container-fluid bg-secondary p-0">
-        <header class="text-bg-primary p-3 d-flex justify-content-between">
-            <h1>Osserc's arcane library</h1>
-            <button class="btn btn-info" id="add-form">Add book</button>
-        </header>
-    </div>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+        <link rel="stylesheet" href="./stylesheet/style.css">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous" defer></script>
+        <script src="./javascript/javascript.js" defer></script>
+        <title>Library</title>
+    </head>
+    <body>
+        <div class="container-fluid bg-secondary p-0">
+            <header class="text-bg-primary p-3 d-flex justify-content-between">
+                <h1>Osserc's arcane library</h1>
+                <button class="btn btn-info" id="add-form" data-bs-toggle="modal" data-bs-target="#modalContainer">Add book</button>
+            </header>
+        </div>
 
-    <div class="container-fluid text-center library row row-cols-3 m-0 p-1 justify-content-evenly align-items-center">
-    </div>
+        <div class="container-fluid text-center library row row-cols-3 m-0 p-1 justify-content-evenly align-items-center">
+        </div>
 
-    <div>
-        <form id="add-book">
-            <label for="title">Title:</label>
-            <input type="text" id="title" name="title">
-            <label for="author">Author:</label>
-            <input type="text" id="author" name="author">
-            <label for="pages">Pages:</label>
-            <input type="number" id="pages" name="pages">
-            <label for="readStatus">Read:</label>
-            <input type="checkbox" id="readStatus" name="readStatus">
-            <button type="submit">Add book</button>
-        </form>
-    </div>
-</body>
+        <div class="modal fade" id="modalContainer" tabindex="-1" aria-labelledby="modalContainerLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalContainerLabel">New book</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="add-book">
+                        <label for="title">Title:</label>
+                        <input type="text" id="title" name="title">
+                        <label for="author">Author:</label>
+                        <input type="text" id="author" name="author">
+                        <label for="pages">Pages:</label>
+                        <input type="number" id="pages" name="pages">
+                        <label for="readStatus">Read:</label>
+                        <input type="checkbox" id="readStatus" name="readStatus">
+                        <button type="submit" data-bs-dismiss="modal">Add book</button>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
