--- a/index.html
+++ b/index.html
@@ -14,36 +14,38 @@
         <div class="container-fluid bg-secondary p-0">
             <header class="text-bg-primary p-3 d-flex justify-content-between">
                 <h1>Osserc's arcane library</h1>
-                <button class="btn btn-info" id="add-form" data-bs-toggle="modal" data-bs-target="#modalContainer">Add book</button>
+                <button class="btn btn-success" id="add-form" data-bs-toggle="modal" data-bs-target="#modalContainer">Add book</button>
             </header>
         </div>
 
-        <div class="container-fluid text-center library row row-cols-3 m-0 p-1 justify-content-evenly align-items-center">
+        <div class="container-fluid text-center library row gap-3 m-0 p-1 justify-content-evenly align-items-center">
         </div>
 
         <div class="modal fade" id="modalContainer" tabindex="-1" aria-labelledby="modalContainerLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="modalContainerLabel">New book</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <form id="add-book">
-                        <label for="title">Title:</label>
-                        <input type="text" id="title" name="title">
-                        <label for="author">Author:</label>
-                        <input type="text" id="author" name="author">
-                        <label for="pages">Pages:</label>
-                        <input type="number" id="pages" name="pages">
-                        <label for="readStatus">Read:</label>
-                        <input type="checkbox" id="readStatus" name="readStatus">
-                        <button type="submit" data-bs-dismiss="modal">Add book</button>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                </div>
+                    <div class="modal-header text-bg-secondary">
+                        <h5 class="modal-title" id="modalContainerLabel">New book</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body text-bg-primary">
+                        <form class="d-flex flex-column gap-2" id="add-book">
+                            <label for="title">Title:</label>
+                            <input type="text" id="title" name="title" class="form-control">
+                            <label for="author">Author:</label>
+                            <input type="text" id="author" name="author" class="form-control">
+                            <label for="pages">Pages:</label>
+                            <input type="number" id="pages" name="pages" class="form-control">
+                            <div class="d-flex justify-content-center gap-2">
+                                <label for="readStatus" class="m-0">Read:</label>
+                                <input type="checkbox" id="readStatus" name="readStatus" class="form-check-input">
+                            </div>
+                            <div class="d-flex justify-content-center"><button class="btn btn-success" type="submit" data-bs-dismiss="modal">Add book</button></div>
+                        </form>
+                    </div>
+                    <div class="modal-footer text-bg-secondary">
+                        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Close</button>
+                    </div>
                 </div>
             </div>
         </div>
